# ClearPodcast

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  NOTICE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: development.md  implementation-plan.md  milestone-1-runtime-spine.md  milestone-2-audio-contract.md  milestone-3-desktop-mvp.md  milestone-4-macos-portable-release.md  milestone-5-windows-portable-cuda.md  release-workflow.md  roadmap.md
docs/adr/: 0001-use-resemble-enhance.md  0002-avoid-ffmpeg-and-export-wav-only.md  0003-bundle-python-sidecar.md  0004-support-windows-and-macos.md  0005-portable-first-distribution.md  0006-use-zip-for-first-macos-portable-artifact.md  0007-use-one-windows-cuda-capable-portable-artifact.md
docs/agents/: domain.md  (+2 more)
packaging/: artifacts.macos-arm64-cpu.json  artifacts.schema.json  artifacts.windows-x64.json
scripts/: bootstrap-macos-cpu-runtime.sh  build-macos-cpu-portable.mjs  build-windows-x64-portable.mjs  check-audio-playback-timing.mjs  check-audio-waveform-silence.mjs  check-windows-gui-subsystem.mjs  generate-third-party-notices.mjs  stage-macos-cpu-resources.mjs  stage-windows-x64-resources.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_log.rs  audio.rs  dialogs.rs  jobs.rs  lib.rs  main.rs  packaging.rs  previews.rs  runtime.rs
src-tauri/tests/: audio_contract.rs
src-tauri/tests/fixtures/: tone.m4a.b64  tone.mp3.b64
(+46 files in other folders)
