[package]
name = "clearpodcast-tauri"
version = "0.1.0"
description = "ClearPodcast desktop runtime"
authors = ["ClearPodcast"]
edition = "2021"

[lib]
name = "clearpodcast_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "enhance_wav"
path = "src/bin/enhance_wav.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
