[package]
name = "clearpodcast-tauri"
version = "0.1.0"
description = "ClearPodcast desktop runtime"
authors = ["ClearPodcast"]
edition = "2021"
default-run = "clearpodcast-tauri"

[lib]
name = "clearpodcast_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "enhance_wav"
path = "src/bin/enhance_wav.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4.44"
hound = "3.5.1"
rfd = "0.15.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", default-features = false, features = ["aac", "alac", "isomp4", "mp3", "pcm", "wav"] }
tauri = { version = "2", features = ["protocol-asset"] }
tempfile = "3.27.0"
thiserror = "1"
